--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -795,6 +795,7 @@ Resources:
         RootStackId: !GetAtt Constants.RootStackId
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        HashStringServiceToken: !GetAtt CustomResourcesStack.Outputs.HashStringServiceToken
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
