--- a/stacks/shared-announce.yml
+++ b/stacks/shared-announce.yml
@@ -31,8 +31,16 @@ Parameters:
   EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
+  HashStringServiceToken: { Type: String }
 
 Resources:
+  Hash:
+    Type: Custom::HashString
+    Properties:
+      ServiceToken: !Ref HashStringServiceToken
+      InputString: !Ref AWS::StackId
+      Length: "8"
+
   ##############################################################################
   # SNS TOPICS
   ##############################################################################
@@ -47,7 +55,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_audio_create
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_audio_create
   AudioDeleteTopic:
     Type: AWS::SNS::Topic
     Properties:
@@ -59,7 +67,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_audio_delete
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_audio_delete
   AudioUpdateTopic:
     Type: AWS::SNS::Topic
     Properties:
@@ -71,7 +79,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_audio_update
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_audio_update
 
   FeedEntryCreateTopic:
     Type: AWS::SNS::Topic
@@ -84,7 +92,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feed_entry_create
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_feed_entry_create
   FeedEntryDeleteTopic:
     Type: AWS::SNS::Topic
     Properties:
@@ -96,7 +104,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feed_entry_delete
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_feed_entry_delete
   FeedEntryUpdateTopic:
     Type: AWS::SNS::Topic
     Properties:
@@ -108,7 +116,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feed_entry_update
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_feed_entry_update
 
   FeedCreateTopic:
     Type: AWS::SNS::Topic
@@ -121,7 +129,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feed_create
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_feed_create
   FeedDeleteTopic:
     Type: AWS::SNS::Topic
     Properties:
@@ -133,7 +141,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feed_delete
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_feed_delete
   FeedUpdateTopic:
     Type: AWS::SNS::Topic
     Properties:
@@ -145,7 +153,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feed_update
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_feed_update
 
   ImageCreateTopic:
     Type: AWS::SNS::Topic
@@ -158,7 +166,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_image_create
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_image_create
   ImageDeleteTopic:
     Type: AWS::SNS::Topic
     Properties:
@@ -170,7 +178,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_image_delete
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_image_delete
   ImageUpdateTopic:
     Type: AWS::SNS::Topic
     Properties:
@@ -182,7 +190,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_image_update
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_image_update
 
   SeriesCreateTopic:
     Type: AWS::SNS::Topic
@@ -195,7 +203,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_series_create
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_series_create
   SeriesDeleteTopic:
     Type: AWS::SNS::Topic
     Properties:
@@ -207,7 +215,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_series_delete
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_series_delete
   SeriesUpdateTopic:
     Type: AWS::SNS::Topic
     Properties:
@@ -219,7 +227,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_series_update
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_series_update
 
   StoryCreateTopic:
     Type: AWS::SNS::Topic
@@ -232,7 +240,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_story_create
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_story_create
   StoryDeleteTopic:
     Type: AWS::SNS::Topic
     Properties:
@@ -244,7 +252,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_story_delete
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_story_delete
   StoryPublishTopic:
     Type: AWS::SNS::Topic
     Properties:
@@ -256,7 +264,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_story_publish
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_story_publish
   StoryUnpublishTopic:
     Type: AWS::SNS::Topic
     Properties:
@@ -268,7 +276,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_story_unpublish
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_story_unpublish
   StoryUpdateTopic:
     Type: AWS::SNS::Topic
     Properties:
@@ -280,7 +288,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_story_update
+      TopicName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_story_update
 
   ##############################################################################
   # SQS QUEUES
@@ -290,7 +298,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
-      QueueName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feeder_series_create
+      QueueName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_feeder_series_create
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt FeederSeriesCreateDeadletterQueue.Arn
@@ -352,7 +360,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
-      QueueName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feeder_series_delete
+      QueueName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_feeder_series_delete
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt FeederSeriesDeleteDeadletterQueue.Arn
@@ -414,7 +422,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
-      QueueName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feeder_series_update
+      QueueName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_feeder_series_update
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt FeederSeriesUpdateDeadletterQueue.Arn
@@ -476,7 +484,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
-      QueueName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feeder_story_create
+      QueueName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_feeder_story_create
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt FeederStoryCreateDeadletterQueue.Arn
@@ -538,7 +546,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
-      QueueName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feeder_story_delete
+      QueueName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_feeder_story_delete
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt FeederStoryDeleteDeadletterQueue.Arn
@@ -600,7 +608,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
-      QueueName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feeder_story_publish
+      QueueName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_feeder_story_publish
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt FeederStoryPublishDeadletterQueue.Arn
@@ -662,7 +670,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
-      QueueName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feeder_story_unpublish
+      QueueName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_feeder_story_unpublish
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt FeederStoryUnpublishDeadletterQueue.Arn
@@ -724,7 +732,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
-      QueueName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feeder_story_update
+      QueueName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_announce_feeder_story_update
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt FeederStoryUpdateDeadletterQueue.Arn
