Set old stack queue names

--- a/stacks/container-apps/cms.prx.org.yml
+++ b/stacks/container-apps/cms.prx.org.yml
@@ -6,6 +6,7 @@ Conditions:
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
   HasMemoryReservation: !Not [!Equals [!Ref ContainerMemoryReservation, ""]]
   HasExplicitHostHeader: !Not [!Equals [!Ref ExplicitHostHeader, ""]]
+  IsStaging: !Equals [!Ref EnvironmentType, Staging]
 Parameters:
   # VPC ########################################################################
   VPC:
@@ -192,6 +193,16 @@ Resources:
               Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
               Value: "3306"
+            - Name: SQS_AUDIO_CALLBACK_QUEUE_NAME
+              Value: !If [IsStaging, staging_cms_audio_callback, production_cms_audio_callback]
+            - Name: SQS_IMAGE_CALLBACK_QUEUE_NAME
+              Value: !If [IsStaging, staging_cms_image_callback, production_cms_image_callback]
+            - Name: SQS_PODCAST_IMPORT_QUEUE_NAME
+              Value: !If [IsStaging, staging_cms_podcast_import, production_cms_podcast_import]
+            - Name: SQS_SEARCH_INDEXER_QUEUE_NAME
+              Value: !If [IsStaging, staging_cms_search_indexer, production_cms_search_indexer]
+            - Name: SQS_DEFAULT_JOB_QUEUE_NAME
+              Value: !If [IsStaging, staging_cms_default, production_cms_default]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -283,6 +294,16 @@ Resources:
               Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
               Value: "3306"
+            - Name: SQS_AUDIO_CALLBACK_QUEUE_NAME
+              Value: !If [IsStaging, staging_cms_audio_callback, production_cms_audio_callback]
+            - Name: SQS_IMAGE_CALLBACK_QUEUE_NAME
+              Value: !If [IsStaging, staging_cms_image_callback, production_cms_image_callback]
+            - Name: SQS_PODCAST_IMPORT_QUEUE_NAME
+              Value: !If [IsStaging, staging_cms_podcast_import, production_cms_podcast_import]
+            - Name: SQS_SEARCH_INDEXER_QUEUE_NAME
+              Value: !If [IsStaging, staging_cms_search_indexer, production_cms_search_indexer]
+            - Name: SQS_DEFAULT_JOB_QUEUE_NAME
+              Value: !If [IsStaging, staging_cms_default, production_cms_default]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
