Refactor CMS IAM access into task role

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -41,6 +41,7 @@ Parameters:
   SharedRedisReplicationGroupEndpointAddress: { Type: String }
   SharedRedisReplicationGroupEndpointPort: { Type: String }
   AnnounceResourcePrefix: { Type: String }
+  PorterJobExecutionSnsTopicArn: { Type: String }
 
   CmsEcrImageTag: { Type: String }
   CmsSecretsVersion: { Type: String }
@@ -110,6 +111,7 @@ Resources:
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
         AnnounceResourcePrefix: !Ref AnnounceResourcePrefix
+        PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
