--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -847,6 +847,7 @@ Resources:
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
         AnnounceResourcePrefix: !GetAtt SharedAnnounceStack.Outputs.ResourcePrefix
+        PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
 
         # App-specific parameters
 
