--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -170,13 +170,11 @@ Resources:
           PolicyName: Announce
         - PolicyDocument:
             Statement:
-              - Action: s3:ListAllMyBuckets
-                Effect: Allow
-                Resource: "*"
               - Action:
                   - s3:GetObject
                   - s3:GetObjectVersion
                   - s3:ListBucket
+                  - s3:ListAllMyBuckets
                 Effect: Allow
                 Resource: "*"
             Version: "2012-10-17"
