Add staging buckets

--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -193,8 +193,8 @@ Resources:
                   - s3:RestoreObject
                 Effect: Allow
                 Resource: # Turn these into root stack paramters
-                  - arn:aws:s3:::prx-feed/*
-                  - arn:aws:s3:::prx-feed
+                  - !If [IsProduction, arn:aws:s3:::prx-feed/*, arn:aws:s3:::staging-prx-feed/*]
+                  - !If [IsProduction, arn:aws:s3:::prx-feed, arn:aws:s3:::staging-prx-feed]
             Version: "2012-10-17"
           PolicyName: S3FeedBucket
       Tags:
