--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -125,7 +125,7 @@ Resources:
         - { Key: prx:ops:cloudwatch-log-group-name, Value: !Ref WebTaskLogGroup }
         - { Key: prx:dev:application, Value: CMS }
 
-  TaskRole: # TODO Refactor IAM user into this role: prx.org-backend, cms-staging
+  TaskRole:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
