Add IAM Access Analyzer policer to organization trail bucket

--- a/devops/aws-management/organization-trail.yml
+++ b/devops/aws-management/organization-trail.yml
@@ -60,6 +60,21 @@ Resources:
             Condition:
               StringEquals:
                 s3:x-amz-acl: bucket-owner-full-control
+          - Sid: Tktktktk
+            Effect: Allow
+            Principal:
+              AWS: "*"
+            Action:
+              - s3:GetObject
+              - s3:ListBucket
+            Resource:
+              - !GetAtt CloudTrailS3Bucket.Arn
+              - !Sub ${CloudTrailS3Bucket.Arn}/AWSLogs/${OrganizationId}/${!aws:PrincipalAccount}/*
+            Condition:
+              StringEquals:
+                aws:PrincipalOrgID: !Ref OrganizationId
+              StringLike:
+                aws:PrincipalArn: arn:aws:iam::${!aws:PrincipalAccount}:role/service-role/AccessAnalyzerMonitorServiceRole*
         Version: "2012-10-17"
 
   CloudTrail:
