--- a/devops/aws-management/organization-trail.yml
+++ b/devops/aws-management/organization-trail.yml
@@ -60,7 +60,7 @@ Resources:
             Condition:
               StringEquals:
                 s3:x-amz-acl: bucket-owner-full-control
-          - Sid: Tktktktk
+          - Sid: IamAccessAnalyzerRead
             Effect: Allow
             Principal:
               AWS: "*"
