Change object ownership on org CloudTrail bucket

--- a/devops/aws-management/organization-trail.yml
+++ b/devops/aws-management/organization-trail.yml
@@ -23,6 +23,11 @@ Resources:
         Rules:
           - ExpirationInDays: 14
             Status: Enabled
+      OwnershipControls:
+        Rules:
+          # The IAM Access Analyzer requires that CloudTrail objects that it
+          # analyzes to generate policies be owned by the bucket owner
+          - ObjectOwnership: BucketOwnerPreferred
       Tags:
         - Key: Project
           Value: Admin
