Add certificates resource group

--- a/stacks/resource-groups.yml
+++ b/stacks/resource-groups.yml
@@ -39,6 +39,21 @@ Resources:
               Values:
                 - !Ref RootStackName
         Type: TAG_FILTERS_1_0
+  StackAcmCertificateGroup:
+    Type: AWS::ResourceGroups::Group
+    Properties:
+      Description: >-
+        Inlcudes all ACM certificates that belong to the root stack
+      Name: !Sub ${RootStackName}-certificates
+      ResourceQuery:
+        Query:
+          ResourceTypeFilters:
+            - AWS::CertificateManager::Certificate
+          TagFilters:
+            - Key: prx:cloudformation:root-stack-name
+              Values:
+                - !Ref RootStackName
+        Type: TAG_FILTERS_1_0
 
 Outputs:
   StackResourceGroupName:
