Use the announce prefix in the app env vars

--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -254,16 +254,8 @@ Resources:
               Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
               Value: !Ref SharedAuroraMysqlPort
-            - Name: SQS_AUDIO_CALLBACK_QUEUE_NAME
-              Value: !GetAtt AudioCallbackQueue.QueueName
-            - Name: SQS_IMAGE_CALLBACK_QUEUE_NAME
-              Value: !GetAtt ImageCallbackQueue.QueueName
-            - Name: SQS_PODCAST_IMPORT_QUEUE_NAME
-              Value: !GetAtt PodcastImportQueue.QueueName
-            - Name: SQS_SEARCH_INDEXER_QUEUE_NAME
-              Value: !GetAtt SearchIndexerQueue.QueueName
-            - Name: SQS_DEFAULT_JOB_QUEUE_NAME
-              Value: !GetAtt DefaultJobQueue.QueueName
+            - Name: ANNOUNCE_RESOURCE_PREFIX
+              Value: !Ref AnnounceResourcePrefix
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
