--- a/stacks/apps/theworld-search.yml
+++ b/stacks/apps/theworld-search.yml
@@ -9,6 +9,13 @@ Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
 
 Parameters:
+  kExternalDomain:
+    Type: String
+    Default: search.theworld.org
+  kInteralDomain:
+    Type: String
+    Default: search.theworld.prx.tech
+  ######
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
@@ -21,6 +28,39 @@ Parameters:
   TheWorldSearchGoogleCustomSearchApiKey: { Type: String }
 
 Resources:
+  ExternalCertificate:
+    Type: AWS::CertificateManager::Certificate
+    Condition: IsProduction
+    Properties:
+      DomainName: !Ref kExternalDomain
+      Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_the-world_search" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: The World }
+        - { Key: prx:dev:application, Value: Search }
+      ValidationMethod: DNS
+  InternalCertificate:
+    Type: AWS::CertificateManager::Certificate
+    Condition: IsProduction
+    Properties:
+      DomainName: !Ref kInteralDomain
+      Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_the-world_search" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: The World }
+        - { Key: prx:dev:application, Value: Search }
+      ValidationMethod: DNS
+
   # API
   HttpApi:
     Type: AWS::Serverless::HttpApi
@@ -173,6 +213,88 @@ Resources:
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:family, Value: The World }
         - { Key: prx:dev:application, Value: Search }
+
+  # Create an association between search.theworld.prx.tech and the production
+  # API Gateway. The API is a regional API, so the domain can be associated
+  # with one API in each AWS region. DNS records are also created in each
+  # region, which creates a latency-based routing policy for DNS queries, of
+  # the domain. This domain exists solely to support the routing policy, and
+  # search.theworld.org should CNAME this domain.
+  InternalDomainName:
+    Type: AWS::ApiGatewayV2::DomainName
+    Condition: IsProduction # Production only
+    Properties:
+      DomainName: !Ref kInteralDomain
+      DomainNameConfigurations:
+        - CertificateArn: !Ref InternalCertificate
+      Tags:
+        prx:meta:tagging-version: "2021-04-07"
+        prx:cloudformation:stack-name: !Ref AWS::StackName
+        prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:cloudformation:root-stack-name: !Ref RootStackName
+        prx:cloudformation:root-stack-id: !Ref RootStackId
+        prx:ops:environment: !Ref EnvironmentType
+        prx:dev:family: The World
+        prx:dev:application: Search
+  InternalApiMapping:
+    Type: AWS::ApiGatewayV2::ApiMapping
+    Condition: IsProduction # Production only
+    Properties:
+      ApiId: !Ref HttpApi
+      DomainName: !Ref InternalDomainName
+      Stage: $default
+  InternalDomainNameRecordSetGroup:
+    Type: AWS::Route53::RecordSetGroup
+    Condition: IsProduction # Production only
+    Properties:
+      Comment: Record sets for proxy server API
+      HostedZoneName: prx.tech.
+      RecordSets:
+        - AliasTarget:
+            DNSName: !GetAtt InternalDomainName.RegionalDomainName
+            EvaluateTargetHealth: true # TODO Add health check
+            HostedZoneId: !GetAtt InternalDomainName.RegionalHostedZoneId
+          Name: !Ref InternalDomainName
+          Region: !Ref AWS::Region
+          SetIdentifier: !Ref AWS::StackName
+          Type: A
+        - AliasTarget:
+            DNSName: !GetAtt InternalDomainName.RegionalDomainName
+            EvaluateTargetHealth: true
+            HostedZoneId: !GetAtt InternalDomainName.RegionalHostedZoneId
+          Name: !Ref InternalDomainName
+          Region: !Ref AWS::Region
+          SetIdentifier: !Ref AWS::StackName
+          Type: AAAA
+
+  # Creates an association between search.theworld.org and the production
+  # API Gateway. This association can be created once per region.
+  # This association allows for a CNAME to be made between search.theworld.org
+  # and search.theworld.prx.tech, the latter of which provides latency-based
+  # routing for the app between regions.
+  ExternalDomainName:
+    Type: AWS::ApiGatewayV2::DomainName
+    Condition: IsProduction # Production only
+    Properties:
+      DomainName: !Ref kExternalDomain
+      DomainNameConfigurations:
+        - CertificateArn: !Ref ExternalCertificate
+      Tags:
+        prx:meta:tagging-version: "2021-04-07"
+        prx:cloudformation:stack-name: !Ref AWS::StackName
+        prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:cloudformation:root-stack-name: !Ref RootStackName
+        prx:cloudformation:root-stack-id: !Ref RootStackId
+        prx:ops:environment: !Ref EnvironmentType
+        prx:dev:family: The World
+        prx:dev:application: Search
+  ExternalApiMapping:
+    Type: AWS::ApiGatewayV2::ApiMapping
+    Condition: IsProduction # Production only
+    Properties:
+      ApiId: !Ref HttpApi
+      DomainName: !Ref ExternalDomainName
+      Stage: $default
 
 Outputs:
   ApiId:
