--- a/stacks/apps/theworld-search.yml
+++ b/stacks/apps/theworld-search.yml
@@ -299,3 +299,5 @@ Resources:
 Outputs:
   ApiId:
     Value: !Ref HttpApi
+  ApiEndpoint:
+    Value: !Sub https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com
