Add search endpoint to dashboard

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -478,3 +478,5 @@ Outputs:
 
   TheWorldSearchApiId:
     Value: !GetAtt TheWorldSearchStack.Outputs.ApiId
+  TheWorldSearchApiEndpoint:
+    Value: !GetAtt TheWorldSearchStack.Outputs.ApiEndpoint
