--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1189,6 +1189,7 @@ Resources:
         RemixTargetGroupFullName: !GetAtt Apps200AStack.Outputs.RemixTargetGroupFullName
 
         TheWorldSearchApiId: !GetAtt Apps100AStack.Outputs.TheWorldSearchApiId
+        TheWorldSearchApiEndpoint: !GetAtt Apps100AStack.Outputs.TheWorldSearchApiEndpoint
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -1283,3 +1284,6 @@ Outputs:
     Value: !GetAtt Apps200AStack.Outputs.FeederVanityAlbDomain
   DovetailVanityAlbDomain:
     Value: !GetAtt Apps300AStack.Outputs.DovetailVanityAlbDomain
+
+  TheWorldSearchApiEndpoint:
+    Value: !GetAtt Apps100AStack.Outputs.TheWorldSearchApiEndpoint
