--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -67,6 +67,7 @@ Parameters:
   RemixTargetGroupFullName: { Type: String }
 
   TheWorldSearchApiId: { Type: String }
+  TheWorldSearchApiEndpoint: { Type: String }
 
 Resources:
   StackOverviewDashboard:
@@ -92,7 +93,7 @@ Resources:
                     "width": 18,
                     "height": 9,
                     "properties": {
-                        "markdown": "\n# Details\n\n- Environment: **${EnvironmentType}**\n- Root stack: **[${RootStackName}](https://console.aws.amazon.com/cloudformation/home?region=${AWS::Region}#/stacks/stackinfo?stackId=${RootStackId})**\n- Infrastructure repository Git commit: **[${InfrastructureGitCommit}](https://github.com/PRX/Infrastructure/commit/${InfrastructureGitCommit})**\n- Shared VPC ID: **[${SharedVpcId}](https://console.aws.amazon.com/vpc/home?region=${AWS::Region}#VpcDetails:VpcId=${SharedVpcId})**\n- Shared VPC CIDR block: **${SharedVpcCidrBlock}**\n---\n- Shared ALB: **${SharedAlbVanityDomain}**\n- Feeder ALB: **[${FeederVanityAlbDomain}](https://${FeederVanityAlbDomain})**\n- Dovetail ALB: **[${DovetailVanityAlbDomain}](https://${DovetailVanityAlbDomain})**\n---\n- Backsaw bucket: **${BacksawDeployBucketRegionalDomainName}**\n- Beta bucket: **${BetaDeployBucketRegionalDomainName}**\n---\n- Proxy API: **[${ProxyApiDefaultEndpoint}](${ProxyApiDefaultEndpoint})**"
+                        "markdown": "\n# Details\n\n- Environment: **${EnvironmentType}**\n- Root stack: **[${RootStackName}](https://console.aws.amazon.com/cloudformation/home?region=${AWS::Region}#/stacks/stackinfo?stackId=${RootStackId})**\n- Infrastructure repository Git commit: **[${InfrastructureGitCommit}](https://github.com/PRX/Infrastructure/commit/${InfrastructureGitCommit})**\n- Shared VPC ID: **[${SharedVpcId}](https://console.aws.amazon.com/vpc/home?region=${AWS::Region}#VpcDetails:VpcId=${SharedVpcId})**\n- Shared VPC CIDR block: **${SharedVpcCidrBlock}**\n---\n- Shared ALB: **${SharedAlbVanityDomain}**\n- Feeder ALB: **[${FeederVanityAlbDomain}](https://${FeederVanityAlbDomain})**\n- Dovetail ALB: **[${DovetailVanityAlbDomain}](https://${DovetailVanityAlbDomain})**\n---\n- Backsaw bucket: **${BacksawDeployBucketRegionalDomainName}**\n- Beta bucket: **${BetaDeployBucketRegionalDomainName}**\n---\n- Proxy API: **[${ProxyApiDefaultEndpoint}](${ProxyApiDefaultEndpoint})**\n- The World Search API: **[${TheWorldSearchApiEndpoint}](${TheWorldSearchApiEndpoint})**"
                     }
                 },
                 {
