Add validation DNS record

--- a/dns/theworld.org-hosted-zone.yml
+++ b/dns/theworld.org-hosted-zone.yml
@@ -300,6 +300,18 @@ Resources:
             - _1fcc43a42474af1ec05a29f236ca68a3.olprtlswtu.acm-validations.aws.
           TTL: "3600"
           Type: CNAME
+  AwsAcmLegacyUsEast1:
+    Type: AWS::Route53::RecordSetGroup
+    Properties:
+      Comment: AWS ACM validation records for prx-legacy in us-east-1
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        #  search.theworld.org
+        - Name: !Sub _473485159b575ac9a329c2c6c9713570.search.${Domain}
+          ResourceRecords:
+            - _70056b05dc4fc317d096b16a68ee18bf.czrmfnbpdk.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
 
   AwsSes:
     Type: AWS::Route53::RecordSetGroup
