Add search.theworld.org DNS record

--- a/dns/theworld.org-hosted-zone.yml
+++ b/dns/theworld.org-hosted-zone.yml
@@ -119,6 +119,18 @@ Resources:
           TTL: "300"
           Type: CNAME
 
+  Search:
+    Type: AWS::Route53::RecordSetGroup
+    Properties:
+      Comment: Search
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - Name: !Sub search.${Domain}
+          ResourceRecords:
+            - search.theworld.prx.tech.
+          TTL: "3600"
+          Type: CNAME
+
   LetsEncrypt:
     Type: AWS::Route53::RecordSetGroup
     Properties:
