--- a/stacks/container-apps/feeder.prx.org.yml
+++ b/stacks/container-apps/feeder.prx.org.yml
@@ -7,6 +7,7 @@ Conditions:
   CreateWorkerResources: !Equals [!Ref CreateWorker, true]
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
   HasMemoryReservation: !Not [!Equals [!Ref ContainerMemoryReservation, ""]]
+  IsStaging: !Equals [!Ref EnvironmentType, Staging]
 
 Parameters:
   # VPC ########################################################################
@@ -380,6 +381,8 @@ Resources:
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: DB_PORT_5432_TCP_PORT
               Value: "3306"
+            - Name: AnnounceResourcePrefix
+              Value: !If [IsStaging, staging, production]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -463,6 +466,8 @@ Resources:
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: DB_PORT_5432_TCP_PORT
               Value: "3306"
+            - Name: AnnounceResourcePrefix
+              Value: !If [IsStaging, staging, production]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
