Export entire prefix, including env

--- a/stacks/shared-announce.yml
+++ b/stacks/shared-announce.yml
@@ -791,4 +791,4 @@ Resources:
 
 Outputs:
   ResourcePrefix:
-    Value: !GetAtt Hash.Hash
+    Value: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}
