Give CMS queues known names

--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -424,6 +424,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AnnounceResourcePrefix}_cms_audio_callback
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt AudioCallbackDeadletterQueue.Arn
@@ -442,6 +443,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AnnounceResourcePrefix}_cms_audio_callback_failures
       ReceiveMessageWaitTimeSeconds: 0
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
@@ -493,6 +495,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AnnounceResourcePrefix}_cms_image_callback
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt ImageCallbackDeadletterQueue.Arn
@@ -511,6 +514,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AnnounceResourcePrefix}_cms_image_callback_failures
       ReceiveMessageWaitTimeSeconds: 0
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
@@ -562,6 +566,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AnnounceResourcePrefix}_cms_podcast_import
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt PodcastImportDeadletterQueue.Arn
@@ -580,6 +585,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AnnounceResourcePrefix}_cms_podcast_import_failures
       ReceiveMessageWaitTimeSeconds: 0
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
@@ -631,6 +637,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AnnounceResourcePrefix}_cms_search_indexer
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt SearchIndexerDeadletterQueue.Arn
@@ -649,6 +656,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AnnounceResourcePrefix}_cms_search_indexer_failures
       ReceiveMessageWaitTimeSeconds: 0
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
@@ -699,6 +707,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AnnounceResourcePrefix}_cms_default
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt DefaultJobDeadletterQueue.Arn
@@ -717,6 +726,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AnnounceResourcePrefix}_cms_default_failures
       ReceiveMessageWaitTimeSeconds: 0
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
