--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -868,6 +868,8 @@ Resources:
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: DB_PORT_5432_TCP_PORT
               Value: !Ref SharedAuroraPostgresqlPort
+            - Name: FIXER_CALLBACK_QUEUE_NAME
+              Value: !GetAtt FixerCallbackQueue.QueueName
             - Name: ANNOUNCE_RESOURCE_PREFIX
               Value: !Ref AnnounceResourcePrefix
           Essential: true
@@ -962,10 +964,10 @@ Resources:
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: DB_PORT_5432_TCP_PORT
               Value: !Ref SharedAuroraPostgresqlPort
-            - Name: DEFAULT_JOB_QUEUE_NAME
-              Value: !GetAtt DefaultJobQueue.QueueName
             - Name: FIXER_CALLBACK_QUEUE_NAME
               Value: !GetAtt FixerCallbackQueue.QueueName
+            - Name: ANNOUNCE_RESOURCE_PREFIX
+              Value: !Ref AnnounceResourcePrefix
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
