Well named feeder queues

--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -502,6 +502,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AnnounceResourcePrefix}_feeder_default
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt DefaultJobDeadletterQueue.Arn
@@ -521,6 +522,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AnnounceResourcePrefix}_feeder_default_failures
       ReceiveMessageWaitTimeSeconds: 0
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
@@ -574,6 +576,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AnnounceResourcePrefix}_feeder_fixer_callback
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt FixerCallbackDeadletterQueue.Arn
@@ -593,6 +596,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AnnounceResourcePrefix}_feeder_fixer_callback_failures
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt DefaultJobDeadletterQueue.Arn
