--- a/stacks/container-apps/cms.prx.org.yml
+++ b/stacks/container-apps/cms.prx.org.yml
@@ -193,7 +193,7 @@ Resources:
               Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
               Value: "3306"
-            - Name: AnnounceResourcePrefix
+            - Name: ANNOUNCE_RESOURCE_PREFIX
               Value: !If [IsStaging, staging, production]
           Essential: true
           Image: !Ref EcrImageTag
@@ -286,7 +286,7 @@ Resources:
               Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
               Value: "3306"
-            - Name: AnnounceResourcePrefix
+            - Name: ANNOUNCE_RESOURCE_PREFIX
               Value: !If [IsStaging, staging, production]
           Essential: true
           Image: !Ref EcrImageTag
