--- a/stacks/container-apps/feeder.prx.org.yml
+++ b/stacks/container-apps/feeder.prx.org.yml
@@ -381,7 +381,7 @@ Resources:
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: DB_PORT_5432_TCP_PORT
               Value: "3306"
-            - Name: AnnounceResourcePrefix
+            - Name: ANNOUNCE_RESOURCE_PREFIX
               Value: !If [IsStaging, staging, production]
           Essential: true
           Image: !Ref EcrImageTag
@@ -466,7 +466,7 @@ Resources:
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: DB_PORT_5432_TCP_PORT
               Value: "3306"
-            - Name: AnnounceResourcePrefix
+            - Name: ANNOUNCE_RESOURCE_PREFIX
               Value: !If [IsStaging, staging, production]
           Essential: true
           Image: !Ref EcrImageTag
