--- a/devops/aws-management/cd/template.yml
+++ b/devops/aws-management/cd/template.yml
@@ -657,10 +657,12 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                  - s3:CreatBucket
+                  - s3:CreateBucket
                   - s3:Get*
                   - s3:List*
+                  - s3:PutBucketOwnershipControls
                   - s3:PutBucketPolicy
+                  - s3:PutBucketTagging
                   - s3:PutLifecycleConfiguration
                   - s3:PutObjectTagging
                 Resource: "*"
