Add permissions for organization trails

--- a/devops/aws-management/cd/template.yml
+++ b/devops/aws-management/cd/template.yml
@@ -669,6 +669,19 @@ Resources:
               - Action: cloudtrail:*
                 Effect: Allow
                 Resource: "*"
+              - Action:
+                  - iam:CreateServiceLinkedRole
+                  - iam:GetRole
+                Effect: Allow
+                Resource: "*"
+              - Action:
+                  - organizations:DescribeOrganization
+                  - organizations:DisableAWSServiceAccess
+                  - organizations:EnableAWSServiceAccess
+                  - organizations:ListAccounts
+                  - organizations:ListAWSServiceAccessForOrganization
+                Effect: Allow
+                Resource: "*"
               - Action: logs:*
                 Effect: Allow
                 Resource: "*"
